<?xml version="1.0"?>

<package>

  <name>actionlib_demo</name>
  <version>0.0.0</version>
  <description>This is a demo on how to interact with actionlib in python 2.7</description>

  <!-- authors -->
  <author email="26124694+NickKnack15@users.noreply.github.com">NickKnack15</author>

    <!-- maintainers -->
  <maintainer email="26124694+NickKnack15@users.noreply.github.com">NickKnack15</maintainer>

  <!-- license -->
  <license>MIT</license>

  <!-- dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <!-- standard message dependencies -->
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <!-- custom message dependencies -->
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>actionlib</build_depend>
  <run_depend>actionlib</run_depend>

  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>

  <!-- testing dependencies -->
  <build_depend>rostest</build_depend>
  <test_depend>rosunit</test_depend>

  <!-- other unspecified tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>


</package>
